# antigravity-sdk-rust

./: .gitignore  Cargo.toml  README.md  README.vi.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: run_examples.yml
docs/: 01_getting_started.md  02_core_concepts.md  03_advanced_usage.md  04_architecture.md  05_fp_architecture.md
examples/deep_dives/: agent_middleware.rs  async_chat.rs  doc_maintenance_agent.rs  docstring_maintenance_agent.rs  host_tool_hooks.rs  interactive_cli.rs  multimodal_pipeline.rs  round_based_chat.rs
examples/getting_started/: agent_skills.rs  app_data_dir_override.rs  autonomous_shell.rs  custom_tools.rs  error_handler.rs  fp_pipeline.rs  hello_world.rs  hooks.rs  human_in_the_loop.rs  mcp_tools.rs  multimodal.rs  observability.rs  persistence.rs  persona_config.rs  policies.rs  streaming.rs  structured_output.rs  subagents.rs  triggers.rs
google/antigravity/: agent.py
google/antigravity/connections/local/: local_connection.py  local_connection_test.py
google/antigravity/examples/: local_connection_example.py  streaming_delta_example.py
google/antigravity/hooks/: hook_runner.py  hook_runner_test.py
proto/: localharness.proto
skills/google-antigravity-sdk/: SKILL.md
skills/google-antigravity-sdk/examples/getting_started/: agent_skills.md  app_data_dir_override.md  custom_tool.md  fp_pipeline.md  hello_world.md  hooks.md  mcp_tools.md  multimodal.md  periodic_trigger.md  persistence.md  persona_config.md  structured_output.md  subagents.md
skills/google-antigravity-sdk/references/: actor_model.md  agent_configuration.md  architecture.md  built_in_tools.md  error_handling.md  fp_architecture.md  mcp_integration.md  observability.md  safety_policies.md
src/: agent.rs  lib.rs  types.rs
src/actors/: mod.rs  state_actor.rs  writer_actor.rs
src/connections/: config.rs  local.rs  mod.rs  wire_types.rs
src/conversation/: conversation.rs  mod.rs
src/core/: agent_core.rs  mod.rs  pipeline.rs  policy_core.rs  step_core.rs  tool_core.rs
src/hooks/: hook_runner.rs  hooks.rs  mod.rs  policy.rs
src/mcp/: mod.rs
src/tools/: mod.rs  tool_context.rs  tool_runner.rs
src/triggers/: helpers.rs  mod.rs  trigger_runner.rs  triggers.rs
src/utils/: interactive.rs  mod.rs
tests/: integration_test.rs  test_mcp.rs
